plugins{
    id 'nva.publication.api.rootplugin'
}

//workaround for jacoco-merge to work
allprojects{
    apply plugin: 'nva.publication.api.java-conventions'
    apply plugin: 'nva.publication.api.dynamo-db'
}

tasks.withType(JavaCompile) {
    sourceCompatibility = JavaVersion.VERSION_17
}

wrapper {
    gradleVersion = '8.2.1'
    distributionType = Wrapper.DistributionType.ALL
}
